--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- SEO基本情報 -->
   <title>Pronavi｜仲間と一緒に成長できるコーチング型プログラミング学習</title>
   <meta name="description" 
-  content="教材だけで終わらせない、実装と案件獲得まで伴走する学習環境。現役エンジニアが継続サポートし、確実に成果につながるスキル定着を支援します。">
+  content="学習だけで終わらせない、実装と案件獲得まで伴走する学習環境。現役エンジニアが継続サポートし、確実に成果につながるスキル定着を支援します。">
   <!-- OGP設定 -->
   <meta property="og:site_name" content="ProNavi（プロナビ）" />
   <meta property="og:type" content="website" />
