--- a/index.html
+++ b/index.html
@@ -1,69 +1,67 @@
 <!DOCTYPE html>
-<html lang="jp">
-
+<html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- SEO基本情報 -->
-  <title>Pronavi｜仲間と一緒に成長できるコーチング型プログラミング学習</title>
-  <meta name="description" 
-  content="学習だけで終わらせない、実装と案件獲得まで伴走する学習環境。現役エンジニアが継続サポートし、確実に成果につながるスキル定着を支援します。">
-  <!-- OGP設定 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <title>ProNavi｜仲間と一緒に成長できる“伴走型”プログラミング学習コミュニティ</title>
+  <meta name="description" content="学習だけで終わらせない、実装と案件獲得まで伴走する学習環境。現役エンジニアが継続サポートし、確実に成果につながるスキル定着を支援します。">
+
+  <!-- OGP -->
   <meta property="og:site_name" content="ProNavi（プロナビ）" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="ProNavi｜仲間と実践で伸びる“伴走型”プログラミング学習コミュニティ" />
-  <meta property="og:description" content="教材で終わらせない。実装・ポートフォリオ制作・案件獲得まで、現役エンジニアが継続伴走。仲間と挑戦し、確実に成果につながるスキル定着を支援します。" />
+  <meta property="og:description" content="教材で終わらせない。実装・ポートフォリオ制作・案件獲得まで、現役エンジニアが継続伴走。" />
   <meta property="og:url" content="https://pronavi.navigator-of-engineering.com/" />
-  <!-- OGP 画像：1200×630 を推奨。後で差し替え -->
-  <meta property="og:image" content="https://pronavi.navigator-of-engineering.com/ogp.jpg" />
+  <meta property="og:image" content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:locale" content="ja_JP" />
 
-  <!-- Twitterカード -->
+  <!-- X(Twitter)カード -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="ProNavi｜仲間と実践で伸びる“伴走型”プログラミング学習コミュニティ" />
   <meta name="twitter:description" content="教材で終わらせない。実装・ポートフォリオ制作・案件獲得まで、現役エンジニアが継続伴走。" />
-  <meta name="twitter:image" content="https://pronavi.navigator-of-engineering.com/ogp.jpg" />
+  <meta name="twitter:image" content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
 
-  <!-- その他SEO -->
+  <!-- Canonical URL -->
   <link rel="canonical" href="https://pronavi.navigator-of-engineering.com/">
-  <!-- favicon add image later / favicon.png: 32×32px または 48×48px-->
-  <link rel="icon" type="image/png" href="/favicon.png">
-  <!-- apple-touch-icon add later /apple-touch-icon.png: 180×180px -->
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  
-  <!-- 構造化データ（JSON-LD）会社情報 -->
+
+  <!-- Favicon & App Icon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="https://pronavi.navigator-of-engineering.com/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://pronavi.navigator-of-engineering.com/img/apple-touch-icon.png">
+
+  <!-- 構造化データ（Organization） -->
   <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "株式会社NOE",
-      "url": "https://pronavi.navigator-of-engineering.com/",
-      "description": "仲間と共に学び、実装と案件獲得まで伴走するプログラミング学習コミュニティ。",
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "株式会社NOE",
+    "url": "https://pronavi.navigator-of-engineering.com/",
+    "description": "仲間と共に学び、実装と案件獲得まで伴走するプログラミング学習コミュニティ。",
+    "email": "noe.co.0126@gmail.com",
+    "address": {
+      "@type": "PostalAddress",
+      "addressRegion": "愛知県",
+      "addressLocality": "名古屋市中区",
+      "streetAddress": "丸の内3丁目15-22 丸の内Usビル801号室",
+      "postalCode": "467-0002",
+      "addressCountry": "JP"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "contactType": "customer support",
       "email": "noe.co.0126@gmail.com",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "丸の内3丁目15-22 丸の内Usビル801号室",
-        "addressLocality": "名古屋市中区",
-        "addressRegion": "愛知県",
-        "postalCode": "467-0002",
-        "addressCountry": "JP"
-      },
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "contactType": "customer support",
-        "email": "noe.co.0126@gmail.com",
-        "availableLanguage": ["Japanese"]
-      }
+      "availableLanguage": ["Japanese"]
     }
-    </script>
+  }
+  </script>
+
   <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <script src="main.js"></script>
+  <script src="main.js" defer></script>
 </body>
-
 </html>
