feat:companyページベース構築

--- a/company.html
+++ b/company.html
@@ -74,9 +74,173 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 
+<body class="company">
+  <main>
+    <section id="fv" class="wrapper">
+      <h2 class="section-title flex-left">会社概要</h2>
+    </section>
 
-<body>
-  <script src="main.js"></script>
+    <section id="message" class="wrapper">
+      <div class="flex-left">
+        <h3 class="box-title">想い</h3>
+        <span>message</span>
+      </div>
+      <div class="flex-right">
+        <h4 class="message">
+          私たちは2023年の創業から現在に至るまで、常に「現場で価値を生み出す」を軸に数多くのプロジェクトに挑戦を続けてきました。
+        </h4>
+        <p ckass="text">設立以来、単なるサービス提供に留まらず、社会やお客様に長く貢献できる組織づくりを目指してきました。<br><br>
+          私たちが目指す未来は、「主体性ある人が集い、新しい価値を生み出す経済圏を創ること」です。個々の挑戦が連鎖し、社会にインパクトを与える循環型のコミュニティを築くことをビジョンとしています。<br><br>
+          このビジョンを共に実現できる仲間を私たちは求めています。同じ志を持ち、挑戦を楽しめる人たちと共に、経済圏を広げていきます。<br><br>
+          私たちが大切にしているのは、ただ事業を拡大することではなく、「共に学び、共に挑戦し、共に未来をつくる」という文化です。この思いを軸に、これからも挑戦し続ける人たちと共に歩んでいきます。
+        </p>
+      </div>
+    </section>
+
+    <section id="member" class="wrapper">
+      <div class="flex-left">
+        <h3 class="box-title">運営メンバー</h3>
+        <span>member</span>
+      </div>
+      <div class="flex-right">
+        <ul>
+          <li class="items">
+            <img src="img/member_pic_demo.png" class="pic" alt="member_pic">
+            <span class="position">現役エンジニア講師</span>
+            <p class="name">TETSU</p>
+            <p class="words">継続可能かつ着実にスキルをつけられる学習方法を一緒に探します。</p>
+            <img src="img/underline_deco.png" class="underline" alt="message_deco">
+          </li>
+          <li class="items">
+            <img src="img/member_pic_demo.png" class="pic" alt="member_pic">
+            <span class="position">現役エンジニア講師</span>
+            <p class="name">TETSU</p>
+            <p class="words">継続可能かつ着実にスキルをつけられる学習方法を一緒に探します。</p>
+            <img src="img/underline_deco.png" class="underline" alt="message_deco">
+          </li>
+          <li class="items">
+            <img src="img/member_pic_demo.png" class="pic" alt="member_pic">
+            <span class="position">現役エンジニア講師</span>
+            <p class="name">TETSU</p>
+            <p class="words">継続可能かつ着実にスキルをつけられる学習方法を一緒に探します。</p>
+            <img src="img/underline_deco.png" class="underline" alt="message_deco">
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="sns" class="wrapper">
+      <div class="flex-left">
+        <h3 class="box-title">SNS</h3>
+        <span>social media</span>
+      </div>
+      <div class="flex-right">
+        <ul>
+          <li>
+            <div class="icon">
+              <img src="img/iruka_pic_demo.png" alt="">
+            </div>
+            <div class="text">
+              <span>iruka.freelance</span>
+              <p class="text">いるか｜ワンランク上の仕事と日常</p>
+            </div>
+          </li>
+          <li>
+            <div class="icon">
+              <img src="img/iruka_pic_demo.png" alt="">
+            </div>
+            <div class="text">
+              <span>kakashi.programming.lab</span>
+              <p class="text">かかし｜プログラミング×教育️</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="media" class="wrapper">
+      <div class="flex-left">
+        <h3 class="box-title">メディア掲載</h3>
+        <span>media</span>
+      </div>
+      <div class="flex-right">
+        <ul>
+          <li>
+            <div class="thumnail">
+              <img src="img/media_demo.png" alt="">
+            </div>
+            <div class="info">
+              <span>2025/02/24</span>
+              <p class="text">
+                TOKYO MX　情報バラエティ番組「ええじゃないか！！」で当スクールについてご紹介いただきました。
+              </p>
+              <a href="https://youtu.be/0Te2W50okgM?si=-7N1pFbvqI8cX_8o">視聴する >>></a>
+            </div>
+
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="overview" class="wrapper">
+      <div class="flex-left">
+        <h3 class="box-title">会社概要</h3>
+        <span>overview</span>
+      </div>
+      <table class="company-table">
+        <tr>
+          <th>会社名</th>
+          <td>株式会社NOE（NOE Co., Ltd.）</td>
+        </tr>
+        <tr>
+          <th>設立</th>
+          <td>2023年1月26日</td>
+        </tr>
+        <tr>
+          <th>代表取締役</th>
+          <td>加藤　大騎</td>
+        </tr>
+        <tr>
+          <th>所在地</th>
+          <td>愛知県名古屋市中区丸の内3丁目15−22 丸の内Usビル801号室</td>
+        </tr>
+        <tr>
+          <th>問い合わせ</th>
+          <td><a href="https://navigator-of-engineering.com/contact/"
+              target="_blank">https://navigator-of-engineering.com/contact/</a></td>
+        </tr>
+        <tr>
+          <th>事業内容</th>
+          <td>プログラミングスクール事業<br>システム・アプリ開発</td>
+        </tr>
+      </table>
+    </section>
+  </main>
+  <footer>
+    <div class="inner">
+      <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="contact">
+        <div class="flex">
+          <img src="img/contact.png" alt="contact">
+          <p class="small">まずはLINEで無料カウンセリングから。<br>お気軽にご相談ください。</p>
+        </div>
+      </a>
+      <div class="footer-bottom">
+        <ul class="left">
+          <li><img src="img/logo_transparent.png" alt="logo"></li>
+          <li><a href="https://navigator-of-engineering.com/" target="_blank">運営会社｜株式会社NOE</a></li>
+          <li><a href="https://pronavi.navigator-of-engineering.com/law_info.html#" target="_blank">特定商取引法に基づく表記</a></li>
+          <li><a href="https://pronavi.navigator-of-engineering.com/privacy.html" target="_blank">プライバシーポリシー</a></li>
+        </ul>
+        <nav class="right">
+          <ul>
+            <li><a href="#">ホーム</a></li>
+            <li><a href="#about">スクール紹介</a></li>
+            <li><a href="#voice">受講生の声</a></li>
+            <li><a href="#company">会社概要</a></li>
+          </ul>
+        </nav>
+      </div>
+  </footer>
 </body>
 
 </html>
