--- a/index.html
+++ b/index.html
@@ -1,67 +1,209 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>ProNavi｜仲間と一緒に成長できる“伴走型”プログラミング学習コミュニティ</title>
-  <meta name="description" content="学習だけで終わらせない、実装と案件獲得まで伴走する学習環境。現役エンジニアが継続サポートし、確実に成果につながるスキル定着を支援します。">
+    <title>
+      ProNavi｜仲間と一緒に成長できる“伴走型”プログラミング学習コミュニティ
+    </title>
+    <meta
+      name="description"
+      content="学習だけで終わらせない、実装と案件獲得まで伴走する学習環境。現役エンジニアが継続サポートし、確実に成果につながるスキル定着を支援します。" />
 
-  <!-- OGP -->
-  <meta property="og:site_name" content="ProNavi（プロナビ）" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="ProNavi｜仲間と実践で伸びる“伴走型”プログラミング学習コミュニティ" />
-  <meta property="og:description" content="教材で終わらせない。実装・ポートフォリオ制作・案件獲得まで、現役エンジニアが継続伴走。" />
-  <meta property="og:url" content="https://pronavi.navigator-of-engineering.com/" />
-  <meta property="og:image" content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
-  <meta property="og:locale" content="ja_JP" />
+    <!-- OGP -->
+    <meta property="og:site_name" content="ProNavi（プロナビ）" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="ProNavi｜仲間と実践で伸びる“伴走型”プログラミング学習コミュニティ" />
+    <meta
+      property="og:description"
+      content="教材で終わらせない。実装・ポートフォリオ制作・案件獲得まで、現役エンジニアが継続伴走。" />
+    <meta
+      property="og:url"
+      content="https://pronavi.navigator-of-engineering.com/" />
+    <meta
+      property="og:image"
+      content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="ja_JP" />
 
-  <!-- X(Twitter)カード -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="ProNavi｜仲間と実践で伸びる“伴走型”プログラミング学習コミュニティ" />
-  <meta name="twitter:description" content="教材で終わらせない。実装・ポートフォリオ制作・案件獲得まで、現役エンジニアが継続伴走。" />
-  <meta name="twitter:image" content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
+    <!-- X(Twitter)カード -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="ProNavi｜仲間と実践で伸びる“伴走型”プログラミング学習コミュニティ" />
+    <meta
+      name="twitter:description"
+      content="教材で終わらせない。実装・ポートフォリオ制作・案件獲得まで、現役エンジニアが継続伴走。" />
+    <meta
+      name="twitter:image"
+      content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
 
-  <!-- Canonical URL -->
-  <link rel="canonical" href="https://pronavi.navigator-of-engineering.com/">
+    <!-- Canonical URL -->
+    <link
+      rel="canonical"
+      href="https://pronavi.navigator-of-engineering.com/" />
 
-  <!-- Favicon & App Icon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="https://pronavi.navigator-of-engineering.com/img/favicon.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="https://pronavi.navigator-of-engineering.com/img/apple-touch-icon.png">
+    <!-- Favicon & App Icon -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://pronavi.navigator-of-engineering.com/img/favicon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://pronavi.navigator-of-engineering.com/img/apple-touch-icon.png" />
 
-  <!-- 構造化データ（Organization） -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "株式会社NOE",
-    "url": "https://pronavi.navigator-of-engineering.com/",
-    "description": "仲間と共に学び、実装と案件獲得まで伴走するプログラミング学習コミュニティ。",
-    "email": "noe.co.0126@gmail.com",
-    "address": {
-      "@type": "PostalAddress",
-      "addressRegion": "愛知県",
-      "addressLocality": "名古屋市中区",
-      "streetAddress": "丸の内3丁目15-22 丸の内Usビル801号室",
-      "postalCode": "467-0002",
-      "addressCountry": "JP"
-    },
-    "contactPoint": {
-      "@type": "ContactPoint",
-      "contactType": "customer support",
-      "email": "noe.co.0126@gmail.com",
-      "availableLanguage": ["Japanese"]
-    }
-  }
-  </script>
+    <!-- 構造化データ（Organization） -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "株式会社NOE",
+        "url": "https://pronavi.navigator-of-engineering.com/",
+        "description": "仲間と共に学び、実装と案件獲得まで伴走するプログラミング学習コミュニティ。",
+        "email": "noe.co.0126@gmail.com",
+        "address": {
+          "@type": "PostalAddress",
+          "addressRegion": "愛知県",
+          "addressLocality": "名古屋市中区",
+          "streetAddress": "丸の内3丁目15-22 丸の内Usビル801号室",
+          "postalCode": "467-0002",
+          "addressCountry": "JP"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "customer support",
+          "email": "noe.co.0126@gmail.com",
+          "availableLanguage": ["Japanese"]
+        }
+      }
+    </script>
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css" />
-</head>
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-  <script src="main.js" defer></script>
-</body>
+  <body>
+    <header>
+      <h1>
+        <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
+      </h1>
+
+      <div class="menu-bg"></div>
+      <nav class="hamburger-menu">
+
+        <div class="company">
+          <h2 class="active-logo">
+            <a href="index.html"><img src="img/logo.png" alt="" /></a>
+          </h2>
+          <p class="address">
+            〒460-0002<br />愛知県名古屋市中区丸の内3丁目15-22<br />丸の内Usビル801号室
+          </p>
+        </div>
+
+        <ul class="menu">
+          <li>
+            <a href="index.html">
+              <span class="en">top</span>
+              <span class="ja">トップページ</span>
+            </a>
+          </li>
+          <li>
+            <a href="about.html">
+              <span class="en">about</span>
+              <span class="ja">スクールの紹介</span>
+            </a>
+          </li>
+          <li>
+            <a href="voice.html">
+              <span class="en">voice</span>
+              <span class="ja">受講生の声</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="en">price</span>
+              <span class="ja">料金</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="en">faq</span>
+              <span class="ja">よくある質問</span>
+            </a>
+          </li>
+          <li>
+            <a href="company.html">
+              <span class="en">company</span>
+              <span class="ja">会社概要</span>
+            </a>
+          </li>
+        </ul>
+
+        <ul class="link">
+          <li><a href="https://line.me/R/ti/p/@420zidsx?oat_content=url">公式LINE</a></li>
+          <li><a href="https://pronavi-board.noe-p.com/">PortNavi</a></li>
+          <li><a href="https://www.instagram.com/kakashi.programming.lab?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="img/instgram.png" class="ig">かかし</a></li>
+          <li><a href="https://www.instagram.com/iruka.freelance?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="img/instgram.png" class="ig">いるか</a></li>
+          <li><a href="https://navigator-of-engineering.com/">運営会社</a></li>
+        </ul>
+
+      </nav>
+
+      <nav class="header-menu">
+        <ul class="menu">
+          <li>
+            <a href="about.html">
+              <span class="en">about</span>
+              <span class="ja">スクールの紹介</span>
+            </a>
+          </li>
+          <li>
+            <a href="voice.html">
+              <span class="en">voice</span>
+              <span class="ja">受講生の声</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="en">price</span>
+              <span class="ja">料金</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="en">faq</span>
+              <span class="ja">よくある質問</span>
+            </a>
+          </li>
+          <li>
+            <a href="company.html">
+              <span class="en">company</span>
+              <span class="ja">会社概要</span>
+            </a>
+          </li>
+        </ul>
+
+        <!-- 固定 -->
+        <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="line">LINE相談</a>
+
+        <div class="hamburger_fixed">
+          <div class="hamburger_toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </div>
+        <!--  -->
+      </nav>
+    </header>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="main.js" defer></script>
+  </body>
 </html>
