画像を追加・aboutのscssとhtmlを更新・_base_scssにカラー lightーyellowを追加

--- a/about.html
+++ b/about.html
@@ -75,11 +75,271 @@
 </script>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 
-<body>
+<body class="about">
+  <header>
+    <h1>
+      <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
+    </h1>
+
+    <div class="menu-bg"></div>
+    <nav class="hamburger-menu">
+
+      <div class="company">
+        <h2 class="active-logo">
+          <a href="index.html"><img src="img/logo.png" alt="" /></a>
+        </h2>
+        <p class="address">
+          〒460-0002<br />愛知県名古屋市中区丸の内3丁目15-22<br />丸の内Usビル801号室
+        </p>
+      </div>
+
+      <ul class="menu">
+        <li>
+          <a href="index.html">
+            <span class="en">top</span>
+            <span class="ja">トップページ</span>
+          </a>
+        </li>
+        <li>
+          <a href="about.html">
+            <span class="en">about</span>
+            <span class="ja">スクールの紹介</span>
+          </a>
+        </li>
+        <li>
+          <a href="voice.html">
+            <span class="en">voice</span>
+            <span class="ja">受講生の声</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="en">price</span>
+            <span class="ja">料金</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="en">faq</span>
+            <span class="ja">よくある質問</span>
+          </a>
+        </li>
+        <li>
+          <a href="company.html">
+            <span class="en">company</span>
+            <span class="ja">会社概要</span>
+          </a>
+        </li>
+      </ul>
+
+      <ul class="link">
+        <li><a href="https://line.me/R/ti/p/@420zidsx?oat_content=url">公式LINE</a></li>
+        <li><a href="https://pronavi-board.noe-p.com/">PortNavi</a></li>
+        <li><a
+            href="https://www.instagram.com/kakashi.programming.lab?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
+              src="img/instgram.png" class="ig">かかし</a></li>
+        <li><a
+            href="https://www.instagram.com/iruka.freelance?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
+              src="img/instgram.png" class="ig">いるか</a></li>
+        <li><a href="https://navigator-of-engineering.com/">運営会社</a></li>
+      </ul>
+
+    </nav>
+
+    <nav class="header-menu">
+      <ul class="menu">
+        <li>
+          <a href="about.html">
+            <span class="en">about</span>
+            <span class="ja">スクールの紹介</span>
+          </a>
+        </li>
+        <li>
+          <a href="voice.html">
+            <span class="en">voice</span>
+            <span class="ja">受講生の声</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="en">price</span>
+            <span class="ja">料金</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="en">faq</span>
+            <span class="ja">よくある質問</span>
+          </a>
+        </li>
+        <li>
+          <a href="company.html">
+            <span class="en">company</span>
+            <span class="ja">会社概要</span>
+          </a>
+        </li>
+      </ul>
+
+      <!-- 固定 -->
+      <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="line">LINE相談</a>
+
+      <div class="hamburger_fixed">
+        <div class="hamburger_toggle">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+      <!--  -->
+    </nav>
+  </header>
+
+  <main>
+    <section id="fv" class="wrapper">
+      <span class="section-title__en">SCHOOL</span>
+      <h2 class="section-title flex-left">スクール概要</h2>
+    </section>
+
+    <section id="moya" class="inner">
+      <h3 class="box-title">こんな毎日にモヤモヤしていませんか</h3>
+      <img src="img/about_moya.png" alt=" モヤモヤする女の子">
+    </section>
+
+    <section id="ideal" class="inner">
+      <h3 class="box-title">稼げるプログラミングスキルを身につけると...</h3>
+      <h3 class="box-title back-text  blue">そんなあなたの課題を実現できます！</h3>
+      <ul>
+        <li>
+          <span><img src="img/about_check_icon.png" alt=""></span>
+          <p class="middle">好きな場所・時間に働ける</p>
+        </li>
+        <li>
+          <span><img src="img/about_check_icon.png" alt=""></span>
+          <p class="middle">スキルを身につけて自己肯定感UP</p>
+        </li>
+        <li>
+          <span><img src="img/about_check_icon.png" alt=""></span>
+          <p class="middle">余裕のある暮らしを目指せる</p>
+        </li>
+        <li>
+          <span><img src="img/about_check_icon.png" alt=""></span>
+          <p class="middle">やりたいことを仕事にできる</p>
+        </li>
+      </ul>
+    </section>
+
+    <section id="power" class="inner">
+      <h3 class="box-title">プログラミングスキルで案件を獲得するためには</h3>
+      <h3 class="box-title back-text yellow">３つの力が必要です</h3>
+      <ul>
+        <li>
+          <img src="img/about_power1.png" alt="技術力のアイコン">
+          <h3 class="box-title">技術力</h3>
+        </li>
+        <li>
+          <img src="img/about_power2.png" alt="営業力のアイコン">
+          <h3 class="box-title">営業力</h3>
+        </li>
+        <li>
+          <img src="img/about_power3.png" alt="継続力のアイコン">
+          <h3 class="box-title">継続力</h3>
+        </li>
+      </ul>
+    </section>
+
+    <section id="about" class="wrapper  shadow-box">
+      <h3 class="box-title">プロナビとは<span>about</span></h3>
+
+      <div class="flex-box">
+        <div class="flex-left">
+          <img src="img/about_about_left.png" alt="プロナビの特徴">
+          <div class="flex-left-text  shadow-box">
+            <p class="text">受講生同士のコミュニティ</p>
+            <p class="small">Pro Naviには、同じ夢に向かうコミュニティがあり、<Br>質問・相談・成果報告を通じてモチベーションを保てます。</p>
+          </div>
+        </div>
+        <div class="flex-right">
+          <p class="message">“技術 × 営業 × 継続 × 仲間”で<br>案件獲得まで徹底サポート。 </p>
+          <p class="small">Pro Naviは、「コーチング型プログラミングスクール」。 専属コーチがあなたの課題に合わせて1対1で伴走し、 同じ目標を持つ仲間と切磋琢磨できるコミュニティも完備。
+            技術だけでなく、営業・案件獲得・継続サポートまでサポート。 「一人では不安」という方でも、一緒に頑張る仲間と共に安心してスキルを仕事に変えられます。</p>
+          <button><a href="https://pronavi-board.noe-p.com/" class="small">コミュニティを詳しく知る</a></button>
+        </div>
+      </div>
+    </section>
+
+    <section id="curriculum" class="wrapper">
+      <h4 class="box-title">カリキュラム<span>curriculum</span></h4>
+      <dl class="step inner">
+        <dt class="month">1month</dt>
+        <dd class="content">
+          <span class="label">授業</span>
+          <h3 box-title>プログラミング基礎学習</h3>
+          <p class="small">HTML/CSSの基礎を徹底的に学習</p>
+        </dd>
+        <dt class="month">2–5month</dt>
+        <dd class="content">
+          <span class="label">授業</span>
+          <h3 box-title>模写コーディング</h3>
+          <p class="small">HTML/CSSの基礎を徹底的に学習</p>
+        </dd>
+        <dt class="month">6month</dt>
+        <dd class="content">
+          <span class="label">授業</span>
+          <h3 box-title>オリジナルWEBサイト作成</h3>
+          <p class="small">HTML/CSSの基礎を徹底的に学習</p>
+        </dd>
+        <dt class="month">7–8month</dt>
+        <dd class="content">
+          <span class="label case">案件</span>
+          <h3 box-title>案件獲得サポート</h3>
+          <p class="small">HTML/CSSの基礎を徹底的に学習</p>
+        </dd>
+        <dt class="month">9month</dt>
+        <dd class="content">
+          <span class="label case">案件</span>
+          <h3 box-title>案件獲得後の営業同行</h3>
+          <p class="small">HTML/CSSの基礎を徹底的に学習</p>
+        </dd>
+      </dl>
+      <p class="small inner">
+        ※期間は未経験受講者の目安です。実際にはその方に合わせたスケジュールを組んでいきます。
+      </p>
+    </section>
+
+    <section id="price" class="inner">
+      <h3 class="box-title">料金<span>price</span></h3>
+      <div class="shadow-box">
+        <h3 class="box-title">６ヶ月集中プログラム</h3>
+        <p class="price">
+          <span class="small">総額</span>
+          <span class="middle">550,000</span>円<span class="small">（税込）</span>
+        </p>
+
+        <ul>
+          <div class="li-left">
+            <li class="text">24時間質問対応</li>
+            <li class="text">あなただけの学習計画を作成</li>
+          </div>
+          <div class="li-right">
+            <li class="text">定期的な講義で苦手を克服</li>
+            <li class="text">案件獲得のサポート</li>
+          </div>
+        </ul>
+      </div>
+    </section>
+
+    <section id="works" class="wrapper">
+      <h3 class="box-title">生徒の制作実績<span>works</span></h3>
+    </section>
+
+  </main>
+
   <script src="main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="main.js" defer></script>Ï
 </body>
 
 </html>
