WIP: 現在作業中の変更を一旦コミット

--- a/index.html
+++ b/index.html
@@ -1,65 +1,42 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>
-      ProNavi｜仲間と一緒に成長できる“伴走型”プログラミング学習コミュニティ
-    </title>
-    <meta
-      name="description"
-      content="学習だけで終わらせない、実装と案件獲得まで伴走する学習環境。現役エンジニアが継続サポートし、確実に成果につながるスキル定着を支援します。" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- OGP -->
-    <meta property="og:site_name" content="ProNavi（プロナビ）" />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="ProNavi｜仲間と実践で伸びる“伴走型”プログラミング学習コミュニティ" />
-    <meta
-      property="og:description"
-      content="教材で終わらせない。実装・ポートフォリオ制作・案件獲得まで、現役エンジニアが継続伴走。" />
-    <meta
-      property="og:url"
-      content="https://pronavi.navigator-of-engineering.com/" />
-    <meta
-      property="og:image"
-      content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:locale" content="ja_JP" />
+  <title>
+    ProNavi｜仲間と一緒に成長できる“伴走型”プログラミング学習コミュニティ
+  </title>
+  <meta name="description" content="学習だけで終わらせない、実装と案件獲得まで伴走する学習環境。現役エンジニアが継続サポートし、確実に成果につながるスキル定着を支援します。" />
 
-    <!-- X(Twitter)カード -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="ProNavi｜仲間と実践で伸びる“伴走型”プログラミング学習コミュニティ" />
-    <meta
-      name="twitter:description"
-      content="教材で終わらせない。実装・ポートフォリオ制作・案件獲得まで、現役エンジニアが継続伴走。" />
-    <meta
-      name="twitter:image"
-      content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
+  <!-- OGP -->
+  <meta property="og:site_name" content="ProNavi（プロナビ）" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="ProNavi｜仲間と実践で伸びる“伴走型”プログラミング学習コミュニティ" />
+  <meta property="og:description" content="教材で終わらせない。実装・ポートフォリオ制作・案件獲得まで、現役エンジニアが継続伴走。" />
+  <meta property="og:url" content="https://pronavi.navigator-of-engineering.com/" />
+  <meta property="og:image" content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:locale" content="ja_JP" />
 
-    <!-- Canonical URL -->
-    <link
-      rel="canonical"
-      href="https://pronavi.navigator-of-engineering.com/" />
+  <!-- X(Twitter)カード -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="ProNavi｜仲間と実践で伸びる“伴走型”プログラミング学習コミュニティ" />
+  <meta name="twitter:description" content="教材で終わらせない。実装・ポートフォリオ制作・案件獲得まで、現役エンジニアが継続伴走。" />
+  <meta name="twitter:image" content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
 
-    <!-- Favicon & App Icon -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="https://pronavi.navigator-of-engineering.com/img/favicon.png" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="https://pronavi.navigator-of-engineering.com/img/apple-touch-icon.png" />
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://pronavi.navigator-of-engineering.com/" />
 
-    <!-- 構造化データ（Organization） -->
-    <script type="application/ld+json">
+  <!-- Favicon & App Icon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="https://pronavi.navigator-of-engineering.com/img/favicon.png" />
+  <link rel="apple-touch-icon" sizes="180x180"
+    href="https://pronavi.navigator-of-engineering.com/img/apple-touch-icon.png" />
+
+  <!-- 構造化データ（Organization） -->
+  <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Organization",
@@ -84,126 +61,237 @@
       }
     </script>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css" />
-  </head>
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-  <body>
-    <header>
-      <h1>
-        <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
-      </h1>
+<body>
+  <header>
+    <h1>
+      <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
+    </h1>
 
-      <div class="menu-bg"></div>
-      <nav class="hamburger-menu">
+    <div class="menu-bg"></div>
+    <nav class="hamburger-menu">
 
-        <div class="company">
-          <h2 class="active-logo">
-            <a href="index.html"><img src="img/logo.png" alt="" /></a>
-          </h2>
-          <p class="address">
-            〒460-0002<br />愛知県名古屋市中区丸の内3丁目15-22<br />丸の内Usビル801号室
-          </p>
+      <div class="company">
+        <h2 class="active-logo">
+          <a href="index.html"><img src="img/logo.png" alt="" /></a>
+        </h2>
+        <p class="address">
+          〒460-0002<br />愛知県名古屋市中区丸の内3丁目15-22<br />丸の内Usビル801号室
+        </p>
+      </div>
+
+      <ul class="menu">
+        <li>
+          <a href="index.html">
+            <span class="en">top</span>
+            <span class="ja">トップページ</span>
+          </a>
+        </li>
+        <li>
+          <a href="about.html">
+            <span class="en">about</span>
+            <span class="ja">スクールの紹介</span>
+          </a>
+        </li>
+        <li>
+          <a href="voice.html">
+            <span class="en">voice</span>
+            <span class="ja">受講生の声</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="en">price</span>
+            <span class="ja">料金</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="en">faq</span>
+            <span class="ja">よくある質問</span>
+          </a>
+        </li>
+        <li>
+          <a href="company.html">
+            <span class="en">company</span>
+            <span class="ja">会社概要</span>
+          </a>
+        </li>
+      </ul>
+
+      <ul class="link">
+        <li><a href="https://line.me/R/ti/p/@420zidsx?oat_content=url">公式LINE</a></li>
+        <li><a href="https://pronavi-board.noe-p.com/">PortNavi</a></li>
+        <li><a
+            href="https://www.instagram.com/kakashi.programming.lab?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
+              src="img/instgram.png" class="ig">かかし</a></li>
+        <li><a
+            href="https://www.instagram.com/iruka.freelance?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
+              src="img/instgram.png" class="ig">いるか</a></li>
+        <li><a href="https://navigator-of-engineering.com/">運営会社</a></li>
+      </ul>
+
+    </nav>
+
+    <nav class="header-menu">
+      <ul class="menu">
+        <li>
+          <a href="about.html">
+            <span class="en">about</span>
+            <span class="ja">スクールの紹介</span>
+          </a>
+        </li>
+        <li>
+          <a href="voice.html">
+            <span class="en">voice</span>
+            <span class="ja">受講生の声</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="en">price</span>
+            <span class="ja">料金</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="en">faq</span>
+            <span class="ja">よくある質問</span>
+          </a>
+        </li>
+        <li>
+          <a href="company.html">
+            <span class="en">company</span>
+            <span class="ja">会社概要</span>
+          </a>
+        </li>
+      </ul>
+
+      <!-- 固定 -->
+      <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="line">LINE相談</a>
+
+      <div class="hamburger_fixed">
+        <div class="hamburger_toggle">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
+      </div>
+      <!--  -->
+    </nav>
+  </header>
+  <main>
 
-        <ul class="menu">
-          <li>
-            <a href="index.html">
-              <span class="en">top</span>
-              <span class="ja">トップページ</span>
-            </a>
-          </li>
-          <li>
-            <a href="about.html">
-              <span class="en">about</span>
-              <span class="ja">スクールの紹介</span>
-            </a>
-          </li>
-          <li>
-            <a href="voice.html">
-              <span class="en">voice</span>
-              <span class="ja">受講生の声</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="en">price</span>
-              <span class="ja">料金</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="en">faq</span>
-              <span class="ja">よくある質問</span>
-            </a>
-          </li>
-          <li>
-            <a href="company.html">
-              <span class="en">company</span>
-              <span class="ja">会社概要</span>
-            </a>
-          </li>
-        </ul>
+<!-- ▼▼▼ テスト用ダミーセクション（ここから） ▼▼▼ -->
+<section style="height:100vh; background:#ddd; display:flex; align-items:center; justify-content:center;">
+  <h2>Test Section A（ダミー）</h2>
+</section>
 
-        <ul class="link">
-          <li><a href="https://line.me/R/ti/p/@420zidsx?oat_content=url">公式LINE</a></li>
-          <li><a href="https://pronavi-board.noe-p.com/">PortNavi</a></li>
-          <li><a href="https://www.instagram.com/kakashi.programming.lab?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="img/instgram.png" class="ig">かかし</a></li>
-          <li><a href="https://www.instagram.com/iruka.freelance?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="img/instgram.png" class="ig">いるか</a></li>
-          <li><a href="https://navigator-of-engineering.com/">運営会社</a></li>
-        </ul>
+<section style="height:100vh; background:#ccc; display:flex; align-items:center; justify-content:center;">
+  <h2>Test Section B（ダミー）</h2>
+</section>
 
-      </nav>
+<section style="height:100vh; background:#bbb; display:flex; align-items:center; justify-content:center;">
+  <h2>Test Section C（ダミー）</h2>
+</section>
+<!-- ▲▲▲ テスト用ダミーセクション（ここまで） ▲▲▲ -->
 
-      <nav class="header-menu">
-        <ul class="menu">
-          <li>
-            <a href="about.html">
-              <span class="en">about</span>
-              <span class="ja">スクールの紹介</span>
-            </a>
-          </li>
-          <li>
-            <a href="voice.html">
-              <span class="en">voice</span>
-              <span class="ja">受講生の声</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="en">price</span>
-              <span class="ja">料金</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="en">faq</span>
-              <span class="ja">よくある質問</span>
-            </a>
-          </li>
-          <li>
-            <a href="company.html">
-              <span class="en">company</span>
-              <span class="ja">会社概要</span>
-            </a>
-          </li>
-        </ul>
 
-        <!-- 固定 -->
-        <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="line">LINE相談</a>
 
-        <div class="hamburger_fixed">
-          <div class="hamburger_toggle">
-            <span></span>
-            <span></span>
-            <span></span>
+
+    <section id="flow" class="theme-section js-theme-section" data-theme="blue">
+      <div class="wrapper">
+        <h2 class="section-title">受講の流れ</h2>
+        <span>flow</span>
+        <p class="text">未経験から案件獲得までの道のり、最短6ヶ月のロードマップ</p>
+      </div>
+      <ul class="wrapper">
+        <li class="step1">
+          <div class="card">
+            <img src="img/top_step1.png" alt="flow_step1">
+            <p class="middle">LINE相談</p>
           </div>
-        </div>
-        <!--  -->
-      </nav>
-    </header>
+          <p class="text">あなたの目標をヒアリングし、最適な学習プランをご提案します。不安に思っていること、なんでもご相談ください。</p>
+        </li>
+        <li class="step2">
+          <div class="card">
+            <img src="img/top_step2.png" alt="flow_step1">
+            <p class="middle">講師決定</p>
+          </div>
+          <p class="text">
+            専属コーチが学習スケジュールを一緒に設計します。あなたの学習フェーズや授業を受けやすい時間、性格などを踏まえて、あなたにぴったりの講師を選別。</p>
+        </li>
+        <li class="step3">
+          <div class="card">
+            <img src="img/top_step3.png" alt="flow_step1">
+            <p class="middle">授業</p>
+          </div>
+          <p class="text">HTML・CSS・JavaScript・PHPを個別授業で学び、実践課題でスキルを磨きます。わからないことはLINEですぐに講師へ質問OK!</p>
+        </li>
+        <li class="step4">
+          <div class="card">
+            <img src="img/top_step4.png" alt="flow_step1">
+            <p class="middle">サイト制作</p>
+          </div>
+          <p class="text">学習の総まとめとしてオリジナルサイトを制作。講師のフィードバックを受けながら、完成度を高めていきます。</p>
+        </li>
+        <li class="step5">
+          <div class="card">
+            <img src="img/top_step5.png" alt="flow_step1">
+            <p class="middle">案件獲得サポート</p>
+          </div>
+          <p class="text">クラウドソーシングでの提案文の添削や営業動向サポートで、初受注を徹底サポートします。さらに、受注後も案件でわからないことがあればアドバイスします。</p>
+        </li>
+      </ul>
+      <div class="scroll-divider">
+        <div class="scroll-text">ProNavi ProNavi ProNavi ProNavi ProNavi</div>
+      </div>
+    </section>
 
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="main.js" defer></script>
-  </body>
+    <section id="teacher" class="theme-section js-theme-section" data-theme="blue">
+      <div class="wrapper">
+        <h2 class="section-title">講師プロフィール</h2>
+        <span>teachers</span>
+      </div>
+      <ul class="teacher-grid wrapper">
+        <li class="items">
+          <img src="img/member_pic_demo.png" class="pic" alt="member_pic">
+          <span class="position">現役エンジニア講師</span>
+          <p class="name">TETSU</p>
+          <p class="words">継続可能かつ着実にスキルをつけられる学習方法を一緒に探します。</p>
+          <img src="img/underline_deco.png" class="underline" alt="message_deco">
+        </li>
+        <li class="items">
+          <img src="img/member_pic_demo.png" class="pic" alt="member_pic">
+          <span class="position">現役エンジニア講師</span>
+          <p class="name">TETSU</p>
+          <p class="words">継続可能かつ着実にスキルをつけられる学習方法を一緒に探します。</p>
+          <img src="img/underline_deco.png" class="underline" alt="message_deco">
+        </li>
+        <li class="items">
+          <img src="img/member_pic_demo.png" class="pic" alt="member_pic">
+          <span class="position">現役エンジニア講師</span>
+          <p class="name">TETSU</p>
+          <p class="words">継続可能かつ着実にスキルをつけられる学習方法を一緒に探します。</p>
+          <img src="img/underline_deco.png" class="underline" alt="message_deco">
+        </li>
+        <li class="items">
+          <img src="img/member_pic_demo.png" class="pic" alt="member_pic">
+          <span class="position">現役エンジニア講師</span>
+          <p class="name">TETSU</p>
+          <p class="words">継続可能かつ着実にスキルをつけられる学習方法を一緒に探します。</p>
+          <img src="img/underline_deco.png" class="underline" alt="message_deco">
+        </li>
+      </ul>
+    </section>
+
+  </main>
+  <footer></footer>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="main.js"></script>
+</body>
+
 </html>
