--- a/company.html
+++ b/company.html
@@ -77,7 +77,7 @@
 <body class="company">
   <header>
     <h1>
-      <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
+      <a href="index.html"><img src="img/logo.png" alt="logo" class="logo" /></a>
     </h1>
 
     <div class="menu-bg"></div>
@@ -353,14 +353,23 @@
         </ul>
         <nav class="right">
           <ul>
-            <li><a href="#">ホーム</a></li>
-            <li><a href="#about">スクール紹介</a></li>
-            <li><a href="#voice">受講生の声</a></li>
-            <li><a href="#company">会社概要</a></li>
+            <li><a href="index.html">ホーム</a></li>
+            <li><a href="about.html">スクール紹介</a></li>
+            <li><a href="voice.html">受講生の声</a></li>
+            <li><a href="#">会社概要</a></li>
           </ul>
         </nav>
       </div>
+
+      <a href="#" class="page-top">
+        <button>
+          <span class="line"></span>
+          <span class="to-top-text">PAGE TOP</span>
+        </button>
+      </a>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
