--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
     <section id="flow" class="theme-section js-theme-section" data-theme="blue">
       <div class="wrapper">
-        <h2 class="section-title">受講の流れ</h2> <span>flow</span>
+        <h2 class="section-title">受講の流れ</h2> <span class="section-title-deco">flow</span>
         <p class="text-top">未経験から案件獲得までの道のり、最短6ヶ月のロードマップ</p>
       </div>
       <ul class="wrapper">
@@ -377,28 +377,28 @@
 
     <section id="teacher" class="theme-section js-theme-section" data-theme="blue">
       <div class="wrapper">
-        <h2 class="section-title">講師プロフィール</h2> <span>teachers</span>
+        <h2 class="section-title">講師プロフィール</h2> <span class="section-title-deco">teachers</span>
       </div>
       <ul class="teacher-grid wrapper">
-        <li class="items"> <img src="img/member_pic_demo.png" class="pic" alt="member_pic"> <span
+        <li class="items"> <img src="img/member_pic_demo.png" class="pic" alt="teacher_pic1"> <span
             class="position">現役エンジニア講師</span>
           <p class="name">TETSU</p>
           <p class="words">継続可能かつ着実にスキルをつけられる学習方法を一緒に探します。</p> <img src="img/underline_deco.png" class="underline"
             alt="message_deco">
         </li>
-        <li class="items"> <img src="img/member_pic_demo.png" class="pic" alt="member_pic"> <span
+        <li class="items"> <img src="img/top_teacher2.png" class="pic" alt="teacher_pic2"> <span
             class="position">現役エンジニア講師</span>
-          <p class="name">TETSU</p>
-          <p class="words">継続可能かつ着実にスキルをつけられる学習方法を一緒に探します。</p> <img src="img/underline_deco.png" class="underline"
+          <p class="name">YURIKO</p>
+          <p class="words">プログラミングスキルを習得するには環境×覚悟が必要だと思っています。</p> <img src="img/underline_deco.png" class="underline"
             alt="message_deco">
         </li>
-        <li class="items"> <img src="img/member_pic_demo.png" class="pic" alt="member_pic"> <span
+        <li class="items"> <img src="img/member_pic_demo.png" class="pic" alt="teacher_pic3"> <span
             class="position">現役エンジニア講師</span>
-          <p class="name">TETSU</p>
-          <p class="words">継続可能かつ着実にスキルをつけられる学習方法を一緒に探します。</p> <img src="img/underline_deco.png" class="underline"
+          <p class="name">AOKI</p>
+          <p class="words">卒業後も自分の力で成長していける学習スキルも身につけて欲しい。</p> <img src="img/underline_deco.png" class="underline"
             alt="message_deco">
         </li>
-        <li class="items"> <img src="img/member_pic_demo.png" class="pic" alt="member_pic"> <span
+        <li class="items"> <img src="img/member_pic_demo.png" class="pic" alt="teacher_pic4"> <span
             class="position">現役エンジニア講師</span>
           <p class="name">TETSU</p>
           <p class="words">継続可能かつ着実にスキルをつけられる学習方法を一緒に探します。</p> <img src="img/underline_deco.png" class="underline"
@@ -409,7 +409,7 @@
 
     <section id="works" class="flip-slider">
       <div class="wrapper">
-        <h2 class="section-title">生徒の制作実績</h2><span>works</span>
+        <h2 class="section-title">生徒の制作実績</h2><span class="section-title-deco">works</span>
       </div>
       <div class="wrapper">
         <div class="flip-slider__inner js-flip-slider">
@@ -489,7 +489,7 @@
 
     <section id="comparison">
       <div class="wrapper">
-        <h2 class="section-title">他スクールとの比較</h2><span>comparison</span>
+        <h2 class="section-title">他スクールとの比較</h2><span class="section-title-deco">comparison</span>
       </div>
       <table class="compare-table wrapper">
         <thead>
@@ -574,6 +574,101 @@
           <small>
             ※テキストテキストテキステキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキステキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
           </small>
+        </div>
+      </div>
+    </section>
+
+    <section id="faq">
+      <div class="flex wrapper">
+        <div class="flex-left">
+          <h2 class="section-title">よくある質問</h2><span class="section-title-deco">FAQ</span>
+        </div>
+        <div class="flex-right">
+          <div class="faq-item">
+            <button class="faq-q js-faq-toggle">
+              <span class="faq-label">Q</span>
+              <p class="faq-question">他のスクールとの違いは何ですか？</p>
+            </button>
+            <div class="faq-a">
+              <span class="faq-label a-label">A</span>
+              <div class="faq-answer">
+                <p>大きく3つあります。<br><br>
+                  ・専属コーチ制: あなた専属のコーチが毎日伴走<br>
+                  ・案件獲得まで完全サポート: 営業同行・受注後のサポートまで<br>
+                  ・卒業後も永久コミュニティ: 一生涯の学習仲間が得られる「スキルを教えて終わり」ではなく、
+                  「案件を獲得して稼げるようになるまで」が私たちのゴールです。</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <button class="faq-q js-faq-toggle">
+              <span class="faq-label">Q</span>
+              <p class="faq-question">本当に未経験でも大丈夫ですか？</p>
+            </button>
+            <div class="faq-a">
+              <span class="faq-label a-label">A</span>
+              <div class="faq-answer">
+                <p>はい、大丈夫です。<br>
+                  受講生の多くが完全未経験からのスタートです。<br>
+                  「パソコンは苦手」という方でも、基礎の基礎から丁寧にサポートします。<br>
+                  まずは無料カウンセリングで、あなたのレベルに合った学習プランをご提案させてください。</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <button class="faq-q js-faq-toggle">
+              <span class="faq-label">Q</span>
+              <p class="faq-question">働きながらでも学習できますか？</p>
+            </button>
+            <div class="faq-a">
+              <span class="faq-label a-label">A</span>
+              <div class="faq-answer">
+                <p>はい、できます。<br>
+                  受講生の多くが働きながらや、子育てと両立しながら学習しています。<br><br>
+                  ・学習時間の例：平日2時間、休日4〜5時間・忙しい時期は学習ペースを調整可能。<br>
+                  ・空き時間に合わせて週１回の授業を予約できます。<br>
+                  ・授業の24時間前まで日程変更可能なので、急な予定変更にも対応可能。<br><br>
+                  あなたのライフスタイルに合わせた学習プランを一緒に考えます。</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <button class="faq-q js-faq-toggle">
+              <span class="faq-label">Q</span>
+              <p class="faq-question">どれくらいの期間で案件獲得できますか？</p>
+            </button>
+            <div class="faq-a">
+              <span class="faq-label a-label">A</span>
+              <div class="faq-answer">
+                <p>平均6ヶ月で初案件獲得される方が多いです。<br><br>
+                  ただし、学習時間や経験によって個人差があります。<br>
+                  最短３ヶ月〜平均６ヶ月での案件獲得を目指して一緒に学習サポートしていきまが、<br>
+                  焦らず、あなたのペースで確実にスキルを身につけることが大切です。</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <button class="faq-q js-faq-toggle">
+              <span class="faq-label">Q</span>
+              <p class="faq-question">どんな人が講師をしていますか？</p>
+            </button>
+            <div class="faq-a">
+              <span class="faq-label a-label">A</span>
+              <div class="faq-answer">
+                <p>全員が「現役で稼いでいる」プロフェッショナルです。<br><br>
+                  ・現役フリーランスエンジニア<br>
+                  ・アプリ開発を手掛ける講師<br>
+                  ・ここで学んだ卒業生も講師として活躍<br>
+                  教科書的な知識だけでなく、現場の生きたノウハウをお伝えします。</p>
+              </div>
+            </div>
+          </div>
+
+
         </div>
       </div>
     </section>
