--- a/company.html
+++ b/company.html
@@ -354,7 +354,7 @@
         <nav class="right">
           <ul>
             <li><a href="index.html">ホーム</a></li>
-            <li><a href="about.html">スクール紹介</a></li>
+            <li><a href="about.html">スクール概要</a></li>
             <li><a href="voice.html">受講生の声</a></li>
             <li><a href="#">会社概要</a></li>
           </ul>
