add chatbot icon

--- a/company.html
+++ b/company.html
@@ -367,6 +367,9 @@
           <span class="to-top-text">PAGE TOP</span>
         </button>
       </a>
+      <a href="#" class="chatbot" aria-label="チャットで相談">
+        <img src="img/footer_icon-chatbot.png" alt="" />
+      </a>
   </footer>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="main.js"></script>
