--- a/index.html
+++ b/index.html
@@ -708,9 +708,11 @@
           <span class="to-top-text">PAGE TOP</span>
         </button>
       </a>
+
+      <a href="#" class="chatbot" aria-label="チャットで相談">
+        <img src="img/footer_icon-chatbot.png" alt="" />
+      </a>
   </footer>
-
-
   <!-- js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
