update: ローカルでマージ

--- a/about.html
+++ b/about.html
@@ -255,8 +255,11 @@
 
       <div class="flex-box">
         <div class="flex-left">
-          <img src="img/about_about_left.png" alt="プロナビの特徴">
-          <div class="flex-left-text  shadow-box">
+          <div class="circle">
+            <p class="circle-left message">マンツーマン<br>コーチング</p>
+            <p class="circle-right message">実践型<br>制作学習</p>
+          </div>
+          <div class="shadow-box">
             <p class="text">受講生同士のコミュニティ</p>
             <p class="small">Pro Naviには、同じ夢に向かうコミュニティがあり、<Br>質問・相談・成果報告を通じてモチベーションを保てます。</p>
           </div>
